fixed animation spacing on home page

--- a/src/components/Animation.css
+++ b/src/components/Animation.css
@@ -9,7 +9,7 @@
     overflow: hidden;
     position: absolute;
     float: right;
-    height: 7vh;
+    height: 9vh;
   }
         
   li {
